# fiedlr.sk

./: .gitignore  .htaccess  BiblioCompiler.hs  CNAME  Categories.hs  Helpers.hs  LICENSE  NOTICE  PdfCompiler.hs  README.md  fiedlr.cabal  index.html  site.hs  template.tex
_site/: about.html  topics.html
_site/blog/: 2020-02-17-why-climate-skepticism-is-mostly-farcical.html
_site/css/: default.css
_site/essays/: index.html
_site/haskell/: 2020-06-03-why-hakyll-is-not-yet-ready-for-your-blog.html  index.html
_site/javascript/: 2019-08-15-pure-modules.html
_site/topics/: es6.html  privacy.html
bib/: math-test.bib  the-immortal-right.bib
css/: default.css  light.css  syntax.css
docs/: CNAME  about.html  index.html  publications.html  topics.html
docs/blog/: 2020-02-17-why-climate-skepticism-is-mostly-farcical.html  index.html
docs/css/: default.css  light.css  syntax.css
docs/essays/: the-immortal-right.html
docs/haskell/: 2020-06-03-why-hakyll-is-not-yet-ready-for-your-blog.html  index.html
docs/javascript/: 2019-08-15-pure-modules.html  2020-02-20-thoughts-on-types-and-typescript.html  2020-02-24-pure-es6-modules-in-action.html  index.html
docs/opinion/: 2020-02-17-why-climate-skepticism-is-mostly-farcical.html  2020-06-03-why-hakyll-is-not-yet-ready-for-your-blog.html  2024-02-19-short-musings-on-extraction-theory.html  index.html
docs/programming/: 2019-08-15-pure-modules.html  2020-02-24-pure-es6-modules-in-action.html  index.html
docs/topics/: audits.html  climate-change.html  coffee.html  cons.html  es6.html  functional-programming.html  fuzzing.html  hakyll.html  haskell.html  javascript.html  pure-modules.html  types.html  (+6 more)
drafts/: 2020-02-20-thoughts-on-types-and-typescript.md  2021-04-12-inline-elements-branching-logic-and-typescript.md  2024-02-19-musings-on-extraction-theory.md
pages/: about.html  publications.html  topics.html
posts/: 2019-01-30-math-test.tex  2019-02-24-code-test.md
templates/: archive.html  default.html  post-list.html  post.html
(+18 files in other folders)
