name:               fiedlr
version:            0.2.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.12.*
                  , pandoc == 2.6.*
                  , pandoc-citeproc == 0.16.*
                  , containers == 0.6.*
                  , filepath == 1.4.*
                  , directory == 1.3.*
                  , blaze-html == 0.9.*
  ghc-options:      -threaded
  default-language: Haskell2010
