name:               fiedlr
version:            0.3.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  other-modules:    BiblioCompiler
                  , PdfCompiler
                  , Helpers
                  , Categories
  build-depends:    base == 4.*
                  , hakyll == 4.12.*
                  , pandoc == 2.6.*
                  , pandoc-citeproc == 0.16.*
                  , containers == 0.6.*
                  , filepath == 1.4.*
                  , blaze-html == 0.9.*
                  , process == 1.6.*
                  , text == 1.2.*
                  , binary == 0.8.*
                  , bytestring == 0.10.*
  ghc-options:      -threaded
  default-language: Haskell2010
